--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
         "react": "^18.1.0",
         "react-dom": "^18.1.0",
         "react-redux": "^8.0.1",
-        "react-scripts": "5.0.1",
-        "recoil": "^0.7.3-alpha.2"
+        "react-scripts": "5.0.1"
     },
     "scripts": {
         "start": "react-scripts start",
